# Create-Table-Latex-For-Collecting-English-Words

./: input.txt  main.py  out.txt  out_0.txt  out_1.txt  out_2.txt  pyproject.toml  tmp.txt
utils/: table_utils.py  template_utils.py
utils/business/: table_funcs.py  work.py
utils/style/: styles.py
