[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["franec94 <franec94@gmail.com>"]
description = ""
name = "thiswirelesswatchdog"
version = "0.1.0"
[tool.poetry.dependencies]
PyYAML = "^5.3"
python = "^3.7"
[tool.poetry.dev-dependencies]
